chore: reorganize and expand .gitignore for better clarity and coverage

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,74 @@
-/target
+############################################################
+# Standard Rust / Cargo build artifacts
+############################################################
+/target/
+
+# (Keep Cargo.lock for binary apps; it's already tracked.)
+
+############################################################
+# OS / Editor noise
+############################################################
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+*~
+.#*
+
+# VS Code / IntelliJ / other IDE metadata
+.vscode/
+.idea/
+*.iml
+
+############################################################
+# Logs & temp files
+############################################################
+*.log
+logs/
+tmp/
+temp/
+
+############################################################
+# Environment / secrets (none committed by default)
+############################################################
+.env
+.env.*
+!.env.example
+
+############################################################
+# Test / coverage / profiling artifacts
+############################################################
+coverage/
+*.profraw
+*.profdata
+*.gcda
+*.gcno
+*.gcov
+tarpaulin-report.html
+tarpaulin-report.json
+
+############################################################
+# Wasm / packaging / dist outputs
+############################################################
+pkg/
+dist/
+wasm-pack.log
+
+############################################################
+# Flamegraphs & perf
+############################################################
+flamegraph.svg
+perf.data*
+
+############################################################
+# Backup files (rustfmt / rust analyzer / editors)
+############################################################
+**/*.rs.bk
+*.orig
+
+############################################################
+# Misc tooling
+############################################################
+.cargo-ok
+node_modules/
+
