chore: add LICENSE file and specify MIT license in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "tui-torrent"
 version = "0.1.0"
 edition = "2024"
 default-run = "tui-torrent"
+license = "MIT"
 
 [[bin]]
 name = "tui-torrent"
