chore: add description and readme fields to Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2024"
 default-run = "tui-torrent"
 license = "MIT"
+description = "A terminal user interface for managing torrents."
+readme = "README.md"
 
 [[bin]]
 name = "tui-torrent"
